# pico-puredata-test

./: .gitmodules  CMakeLists.txt  README.md
ext/freertos-posix/: CMakeLists.txt  freertos-posix-import.cmake
ext/pd/: CMakeLists.txt  libpd_import.cmake
ext/pd/include/: lib.h
ext/pd/src/: lib.c
ext/pd/src/stubs/: gui.c
include/: FreeRTOSConfig.h
src/: espd.c  espd.h  main-local.c  main.c
